@@ -1,3 +1,8 @@
+2013-12-21  Per Bothner  <per@bothner.com>
+
+	* files.scm (path-bytes, path-data): New functions.
+	(PD): New constructor syntax.
+
 2013-12-12  Per Bothner  <per@bothner.com>
 
 	Implement R6RS/R7RS-style exception handling.
